plugins {
    id 'org.springframework.boot' version '2.1.5.RELEASE'
    id 'java'
    id 'jacoco'
    id 'com.github.ben-manes.versions' version '0.21.0'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.piotrek'
version = '19.05'
sourceCompatibility = '1.8'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation "org.springframework.boot:spring-boot-configuration-processor"

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-oauth2-client'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.9'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools'
    
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.projectlombok:lombok'

    testImplementation "org.testcontainers:junit-jupiter:1.11.3"
    testImplementation 'org.testcontainers:mariadb:1.11.3'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.0-M1'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.mockito:mockito-junit-jupiter:2.28.2'
    testImplementation 'org.mockito:mockito-core:2.28.2'
    testImplementation('org.springframework.boot:spring-boot-starter-test')
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}